--- a/Main.storyboard
+++ b/Main.storyboard
@@ -2420,6 +2420,9 @@
                                                     <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
+                                                    <variation key="heightClass=regular-widthClass=compact" misplaced="YES">
+                                                        <rect key="frame" x="20" y="30" width="167" height="20"/>
+                                                    </variation>
                                                 </label>
                                             </subviews>
                                             <constraints>
